[tool.poetry]
name = "resume-pycli"
version = "2.0.0"
description = "CLI tool to easily setup a new resume"
authors = ["Nicolas Karolak <nicolas@karolak.fr>"]
license = "GPL-3.0-or-later"
keywords = ["resume", "json", "cli"]
readme = "README.md"
homepage = "https://github.com/nikaro/resume-pycli"
repository = "https://github.com/nikaro/resume-pycli"
include = [
    "tests/",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
Jinja2 = "*"
jsonschema = "*"
beautifulsoup4 = "*"
weasyprint = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
resume = 'resume_pycli.script:cli'
resumepy = 'resume_pycli.script:cli'

[tool.poetry.group.dev.dependencies]
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
