[tool.poetry]
name = "resume-pycli"
version = "4.1.0"
description = "CLI tool to easily setup a new resume"
authors = ["Nicolas Karolak <nicolas@karolak.fr>"]
license = "GPL-3.0-or-later"
keywords = ["resume", "json", "cli"]
readme = "README.md"
homepage = "https://github.com/nikaro/resume-pycli"
repository = "https://github.com/nikaro/resume-pycli"
include = [
    "tests/",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = { extras = ["all"], version = "*" }
jsonschema = "*"
beautifulsoup4 = "*"
flask = "*"
playwright = { version = "*", optional = true }
weasyprint = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
ruff = "*"
black = "*"
types-beautifulsoup4 = "*"
types-jsonschema = "*"
pytest-mock = "*"

[tool.poetry.extras]
playwright = ["playwright"]
weasyprint = ["weasyprint"]

[tool.ruff]
ignore = ["E501"]

[tool.poetry.scripts]
resume = "resume_pycli.cli:app"
resumepy = "resume_pycli.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
